--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+https://files.pythonhosted.org/packages/0e/ce/f8a3cff33ac03a8219768f0694c5d703c8e037e6aba2e865f9bae22ed63c/dlib-19.8.1-cp36-cp36m-win_amd64.whl#sha256=794994fa2c54e7776659fddb148363a5556468a6d5d46be8dad311722d54bfcf
 absl-py==1.1.0
 altair==4.2.0
 appnope==0.1.2
@@ -17,14 +18,14 @@ cffi==1.15.0
 charset-normalizer==2.0.3
 click==7.1.2
 cloudbiolinux==0.1
-cmake
+cmake==3.18.4.post1
 commonmark==0.9.1
 contrib==0.3.0
 cryptography==37.0.2
 cycler==0.10.0
 decorator==5.1.1
 Django==3.2.5
-dlib
+dlib==19.18.0
 entrypoints==0.4
 executing==0.8.2
 fabric==2.7.0
@@ -144,5 +145,3 @@ wrapt==1.12.1
 zipp==3.7.0
 zope.event==4.5.0
 zope.interface==5.2.0
-scikit-image
-
